address section added

--- a/index.html
+++ b/index.html
@@ -1,59 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year</title>
-    <link rel="shortcut icon" href="./images/new-year.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./images/new-year.png"
+      type="image/x-icon"
+    />
 
     <!-- css file path -->
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- header section starts here -->
     <header>
-        <section class="container banner">
-            <section class="banner-text">
-                <h3>Happy New Year</h3>
-                <h2>New Year Party <br> Celebration</h2>
-            </section>
+      <section class="container banner">
+        <section class="banner-text">
+          <h3>Happy New Year</h3>
+          <h2>
+            New Year Party <br />
+            Celebration
+          </h2>
         </section>
+      </section>
     </header>
     <!-- header section ends here -->
 
     <!-- Off section starts here -->
     <section id="off">
-        <section class="container off-section">
-            <section class="off-heading">
-                <h1>65% OFF</h1>
-                <p>OUR HOLIDAY DEALS ARE BETTER</p>
-                <h2>ALL CATEGORIES</h2>
-            </section>
-            <section class="off-image">
-                <img src="./images/new-year-photo.png" alt="">
-            </section>
+      <section class="container off-section">
+        <section class="off-heading">
+          <h1>65% OFF</h1>
+          <p>OUR HOLIDAY DEALS ARE BETTER</p>
+          <h2>ALL CATEGORIES</h2>
         </section>
+        <section class="off-image">
+          <img src="./images/new-year-photo.png" alt="" />
+        </section>
+      </section>
     </section>
     <!-- Off section ends here -->
 
     <!-- Welcome section starts here -->
     <section id="welcome">
-        <section class="container welcome-section">
-            <section class="welcome-section-text">
-                <h2>Welcome to <br> midnight party</h2>
-            <p>
-                Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
-            </p>
-            <button>Join Now</button>
-            </section>
-            <section class="welcome-section-image">
-                <img src="./images/year.png" alt="">
-            </section>
+      <section class="container welcome-section">
+        <section class="welcome-section-text">
+          <h2>
+            Welcome to <br />
+            midnight party
+          </h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+          <button>Join Now</button>
         </section>
+        <section class="welcome-section-image">
+          <img src="./images/year.png" alt="" />
+        </section>
+      </section>
     </section>
     <!-- Welcome section ends here -->
 
-
-</body>
+    <!-- address section starts here -->
+    <section id="address">
+        <section class="container address-section">
+            <section class="address-section-text">
+                <p><span>Place:</span>New Park Hotel</p>
+            <p><span>Date:</span>31 December Night 2023</p>
+            <p><span>Time:</span>Evening 7.30 pm to 12.30 am</p>
+            <button>Join Now</button>
+            </section>
+        </section>
+    </section>
+    <!-- address section ends here -->
+  </body>
 </html>
