--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Year</title>
+    <title>New Year Landing Page</title>
     <link
       rel="shortcut icon"
       href="./images/new-year.png"
@@ -77,5 +77,27 @@
         </section>
     </section>
     <!-- address section ends here -->
+
+    <!-- Coming Soon section starts here -->
+    <section id="coming-soon">
+        <section class="container coming-soon">
+            <section class="coming-soon-section1">
+                <h5>NEW BEST OFFER</h5>
+                <h3>Coming Soon</h3>
+                <p>
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+                </p>
+            </section>
+            <section class="coming-soon-section2">
+                <img src="./images/elipse.png" alt="">
+            </section>
+            <section class="coming-soon-section3">
+                <h4>2024</h4>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            </section>
+        </section>
+    </section>
+    <!-- Coming Soon section ends here -->
+
   </body>
 </html>
