coming soon section added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             <section class="coming-soon-section3">
                 <h4>2024</h4>
                 <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <section class="coming-soon-image">
+                  <img src="./images/new-year.png" alt="">
+                </section>
             </section>
         </section>
     </section>
