holiday section added

--- a/index.html
+++ b/index.html
@@ -67,40 +67,70 @@
 
     <!-- address section starts here -->
     <section id="address">
-        <section class="container address-section">
-            <section class="address-section-text">
-                <p><span>Place:</span>New Park Hotel</p>
-            <p><span>Date:</span>31 December Night 2023</p>
-            <p><span>Time:</span>Evening 7.30 pm to 12.30 am</p>
-            <button>Join Now</button>
-            </section>
+      <section class="container address-section">
+        <section class="address-section-text">
+          <p><span>Place:</span>New Park Hotel</p>
+          <p><span>Date:</span>31 December Night 2023</p>
+          <p><span>Time:</span>Evening 7.30 pm to 12.30 am</p>
+          <button>Join Now</button>
         </section>
+      </section>
     </section>
     <!-- address section ends here -->
 
     <!-- Coming Soon section starts here -->
     <section id="coming-soon">
-        <section class="container coming-soon">
-            <section class="coming-soon-section1">
-                <h5>NEW BEST OFFER</h5>
-                <h3>Coming Soon</h3>
-                <p>
-                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
-                </p>
-            </section>
-            <section class="coming-soon-section2">
-                <img src="./images/elipse.png" alt="">
-            </section>
-            <section class="coming-soon-section3">
-                <h4>2024</h4>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
-                <section class="coming-soon-image">
-                  <img src="./images/new-year.png" alt="">
-                </section>
-            </section>
+      <section class="container coming-soon">
+        <section class="coming-soon-section1">
+          <h5>NEW BEST OFFER</h5>
+          <h3>Coming Soon</h3>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
         </section>
+        <section class="coming-soon-section2">
+          <img src="./images/elipse.png" alt="" />
+        </section>
+        <section class="coming-soon-section3">
+          <h4>2024</h4>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+          </p>
+          <section class="coming-soon-image">
+            <img src="./images/new-year.png" alt="" />
+          </section>
+        </section>
+      </section>
     </section>
     <!-- Coming Soon section ends here -->
 
+    <!-- Holidays section starts here -->
+    <section id="holidays">
+      <section class="container holidays-section">
+        <section class="holidays-text">
+          <h5>WHAT IS FUNCTIONAL</h5>
+          <h1><span> Holidays</span> Sale 50%</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit
+            consectetur.
+          </p>
+        </section>
+        <section class="holidays-image">
+          <section class="holidays-image1">
+            <img class="discount-image" src="./images/discount.png" alt="">
+            <img class="holiday1-image" src="./images/holiday1.png" alt="">
+          </section>
+          <section class="holidays-image2">
+             <img class="holiday2" src="./images/holiday2.png" alt="">
+             <img class="holiday3" src="./images/holiday3.png" alt="">
+          </section>
+        </section>
+      </section>
+    </section>
+    <!-- Holidays section ends here -->
   </body>
 </html>
