Portfolio section added

--- a/index.html
+++ b/index.html
@@ -132,5 +132,43 @@
       </section>
     </section>
     <!-- Holidays section ends here -->
+
+    <!-- Portfolio section starts here -->
+    <section id="portfolio">
+      <section class="container portfolio-section">
+        <section class="portfolio-text">
+          <h5>THE BEST GIFTS</h5>
+          <h2>Our Awesome Portfolio</h2>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+          </p>
+        </section>
+        <section class="portfolio-content">
+
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image1.png" alt="">
+          </section>
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image2.png" alt="">
+          </section>
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image3.png" alt="">
+          </section>
+
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image4.png" alt="">
+          </section>
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image5.png" alt="">
+          </section>
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image6.png" alt="">
+          </section>
+
+        </section>
+      </section>
+    </section>
+    <!-- Portfolio section ends here -->
+
   </body>
 </html>
