subscribe section added

--- a/index.html
+++ b/index.html
@@ -170,5 +170,25 @@
     </section>
     <!-- Portfolio section ends here -->
 
+    <!-- Subscribe section ends here -->
+    <section id="subscribe">
+      <section class="container subscribe-section">
+        <section class="subscribe-email-icon">
+          <img src="./images/email.png" alt="">
+        </section>
+        <section class="subscribe-text">
+          <h1>Subscribe Newsletter</h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.  <br> Ipsum sed sodales risus ut pellentesque vel euismod.
+          </p>
+        </section>
+        <form action="" class="subscribe-form">
+          <input type="email" name="email" id="email" placeholder="user@gmail.com">
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
+    </section>
+    <!-- Subscribe section ends here -->
+
   </body>
 </html>
