footer section added and text updated

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
             midnight party
           </h2>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+            Explore exclusive Midnight Party collections designed to make you stand out in any crowd.
           </p>
           <button>Join Now</button>
         </section>
@@ -85,9 +83,7 @@
           <h5>NEW BEST OFFER</h5>
           <h3>Coming Soon</h3>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
+           🌟 Exciting News! 🌟 Get ready for something extraordinary - our NEW BEST OFFER is on the horizon! 🎉✨ Stay tuned for unbeatable deals, exclusive discounts, and fabulous finds. Your fashion journey is about to get even more exciting! 🛍️💖
           </p>
         </section>
         <section class="coming-soon-section2">
@@ -96,7 +92,7 @@
         <section class="coming-soon-section3">
           <h4>2024</h4>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.
+            Wishing you a dazzling New Year filled with style, joy, and countless fashion moments!
           </p>
           <section class="coming-soon-image">
             <img src="./images/new-year.png" alt="" />
@@ -113,20 +109,17 @@
           <h5>WHAT IS FUNCTIONAL</h5>
           <h1><span> Holidays</span> Sale 50%</h1>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod. Eleifend nunc purus quam id <br> fermentum amet amet sit
-            consectetur.
+            ✨ 'Tis the season for incredible savings!  🎁 Enjoy the magic of the holidays with <br>  our spectacular SALE – now at 50% off! 🌟🛍️ Unwrap the joy of stylish finds and make your festive season extra special. <br> Hurry, this offer won't last forever! 🎄✨
           </p>
         </section>
         <section class="holidays-image">
           <section class="holidays-image1">
-            <img class="discount-image" src="./images/discount.png" alt="">
-            <img class="holiday1-image" src="./images/holiday1.png" alt="">
+            <img class="discount-image" src="./images/discount.png" alt="" />
+            <img class="holiday1-image" src="./images/holiday1.png" alt="" />
           </section>
           <section class="holidays-image2">
-             <img class="holiday2" src="./images/holiday2.png" alt="">
-             <img class="holiday3" src="./images/holiday3.png" alt="">
+            <img class="holiday2" src="./images/holiday2.png" alt="" />
+            <img class="holiday3" src="./images/holiday3.png" alt="" />
           </section>
         </section>
       </section>
@@ -140,31 +133,29 @@
           <h5>THE BEST GIFTS</h5>
           <h2>Our Awesome Portfolio</h2>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+            Dive into a world of style and sophistication with 'Our Awesome Portfolio.' 🌟 From trendsetting fashion to must-have essentials, our curated collection promises an unparalleled shopping experience.
           </p>
         </section>
         <section class="portfolio-content">
-
           <section class="portfolio-image">
-            <img src="./images/portfolio-image1.png" alt="">
+            <img src="./images/portfolio-image1.png" alt="" />
           </section>
           <section class="portfolio-image">
-            <img src="./images/portfolio-image2.png" alt="">
+            <img src="./images/portfolio-image2.png" alt="" />
           </section>
           <section class="portfolio-image">
-            <img src="./images/portfolio-image3.png" alt="">
-          </section>
-
-          <section class="portfolio-image">
-            <img src="./images/portfolio-image4.png" alt="">
-          </section>
-          <section class="portfolio-image">
-            <img src="./images/portfolio-image5.png" alt="">
-          </section>
-          <section class="portfolio-image">
-            <img src="./images/portfolio-image6.png" alt="">
+            <img src="./images/portfolio-image3.png" alt="" />
           </section>
 
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image4.png" alt="" />
+          </section>
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image5.png" alt="" />
+          </section>
+          <section class="portfolio-image">
+            <img src="./images/portfolio-image6.png" alt="" />
+          </section>
         </section>
       </section>
     </section>
@@ -174,21 +165,58 @@
     <section id="subscribe">
       <section class="container subscribe-section">
         <section class="subscribe-email-icon">
-          <img src="./images/email.png" alt="">
+          <img src="./images/email.png" alt="" />
         </section>
         <section class="subscribe-text">
           <h1>Subscribe Newsletter</h1>
           <p>
-            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.  <br> Ipsum sed sodales risus ut pellentesque vel euismod.
+          Stay in the loop with the latest trends and exclusive offers! <br> 💌✨ Subscribe to our newsletter and unlock a world of style delivered straight to your inbox. <br> Be the first to know about new arrivals, special promotions, and insider updates. Join our fashion community.
           </p>
         </section>
         <form action="" class="subscribe-form">
-          <input type="email" name="email" id="email" placeholder="user@gmail.com">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="user@gmail.com"
+          />
           <button type="submit">Subscribe</button>
         </form>
       </section>
     </section>
     <!-- Subscribe section ends here -->
 
+    <!-- Footer section starts here -->
+    <footer id="footer">
+      <section class="footer-content">
+        <section class="footer-section1">
+          <section class="left">
+            <p>
+              44, Big Building Roosevelt Street <br /><br>
+              Beach Gardens Florida 33410
+            </p>
+          </section>
+          <section class="right">
+            <p> <img src="./images/phone.png" alt=""> <a href="tel:+8801728174733">       +8801728174733</a></p>
+            <br>
+            <p><img src="./images/Website.png" alt=""> <a href="https://github.com/mstsurnalyakter" target="_blank">www.mstsurnalyakter.com</a></p>
+          </section>
+        </section>
+          <hr>
+        <section class="footer-section2">
+          <a href="https://web.facebook.com/mstsurnalyakter"><img src="./images/facebook.png" alt="facebook icon"></a>
+          <a href="https://github.com/mstsurnalyakter"><img src="./images/github.png" alt="github icon"></a>
+          <a href="https://twitter.com/mstsurnalyakter"><img src="./images/twitter.png" alt="twitter icon"></a>
+          <a href="https://www.linkedin.com/in/mst-surnaly-akter/"><img src="./images/linkedin.png" alt="linkedin icon"></a>
+          <a href="https://www.instagram.com/mstsurnalyakte/"><img src="./images/instagram.png" alt="instagram icon"></a>
+        </section>
+        <hr>
+        <section class="footer-section3">
+          <p>2017, All Rights Reserved.</p>
+          <p>Unsubscribe</p>
+        </section>
+      </section>
+    </footer>
+    <!-- Footer section ends here -->
   </body>
 </html>
