index.html file updated

--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
         </section>
           <hr>
         <section class="footer-section2">
-          <a href="https://web.facebook.com/mstsurnalyakter"><img src="./images/facebook.png" alt="facebook icon"></a>
-          <a href="https://github.com/mstsurnalyakter"><img src="./images/github.png" alt="github icon"></a>
-          <a href="https://twitter.com/mstsurnalyakter"><img src="./images/twitter.png" alt="twitter icon"></a>
-          <a href="https://www.linkedin.com/in/mst-surnaly-akter/"><img src="./images/linkedin.png" alt="linkedin icon"></a>
-          <a href="https://www.instagram.com/mstsurnalyakte/"><img src="./images/instagram.png" alt="instagram icon"></a>
+          <a href="https://web.facebook.com/mstsurnalyakter" target="_blank"><img src="./images/facebook.png" alt="facebook icon"></a>
+          <a href="https://github.com/mstsurnalyakter" target="_blank"><img src="./images/github.png" alt="github icon"></a>
+          <a href="https://twitter.com/mstsurnalyakter" target="_blank"><img src="./images/twitter.png" alt="twitter icon"></a>
+          <a href="https://www.linkedin.com/in/mst-surnaly-akter/" target="_blank"><img src="./images/linkedin.png" alt="linkedin icon"></a>
+          <a href="https://www.instagram.com/mstsurnalyakte/" target="_blank"><img src="./images/instagram.png" alt="instagram icon"></a>
         </section>
         <hr>
         <section class="footer-section3">
